# private-scripts

./: .gitignore  README.md
async-learn/: README.md  pyproject.toml
async-learn/src/async_learn/: __init__.py  command.py  event_loop_learn.py  myfunc.py  run_in_executor_learn.py
charaCli/: main.py  requirements.txt
inputSerialCode/: .gitignore  pyproject.toml
inputSerialCode/inputserialcode/: main.py
onlinetalk/: pyproject.toml
onlinetalk/onlinetalkbata/: ngt48cdshop.py  onlinetalk.py  writegsheet.py
python-samples/format-test/: README.md  pyproject.toml
python-samples/format-test/src/format_test/: cli.py  decorators.py  format_func.py  fstring_func.py  logging_func.py  percent_func.py  plus_func.py  template_func.py
python-samples/threading-test/: .gitignore  pyproject.toml
python-samples/threading-test/src/threading_test/: __init__.py  cli.py  simple_threading.py  threadpool.py
react-practice/practice/: package.json
react-practice/practice/src/: index.js
react/react-practice/practice/: package-lock.json
template/python-project/: README.md  init.sh
template/python-project/template/: pyproject_additional_config.toml
