[tool.poetry]
name = "onlinetalkbata"
version = "0.1.0"
description = ""
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
python-dotenv = "^0.15.0"
beautifulsoup4 = "^4.9.3"
gspread = "^4.0.1"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"
poethepoet = "^0.11.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
main = "onlinetalkbata.ngt48cdshop:main"
main2 = "onlinetalkbata.onlinetalk:main"

[tool.poe.tasks.write]
help = "write to google spreadsheet"
cmd = "python onlinetalkbata/writegsheet.py"
[tool.poe.tasks.lint]
help = "lint script"
cmd = "flake8 onlinetalkbata/"
[tool.poe.tasks.format]
help = "auto format"
sequence = [
  { cmd = "autoflake -ir --remove-all-unused-imports --ignore-init-module-imports onlinetalkbata/"},
  { cmd = "isort onlinetalkbata/" },
  { cmd = "autopep8 -ir onlinetalkbata/" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
