[tool.poetry]
name = "format-test"
version = "0.9.0"
description = ""
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
packages = [
  {include="format_test", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.5.2"
pyproject-flake8 = "^0.0.1-alpha.5"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
poethepoet = "^0.16.0"
flake8 = "4.0.1"

[tool.poetry.scripts]
test = "format_test.cli:cli"

[tool.poe.tasks.lint]
sequence = [
  { cmd = "pflake8 src/" },
  { cmd = "mypy src/" }
]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
sequence = [ 
  { cmd = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports src/" },
  { cmd = "isort src/" },
  { cmd = "black src/" },
  "lint"
]


[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
