[tool.poetry]
name = "threading-test"
version = "0.9.0"
description = ""
authors = ["KAWAI Shun <mypaceshun@gmail.com>"]
packages = [
  {include="threading_test", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.6.0"
poethepoet = "^0.16.0"
mypy = "^0.971"
pyproject-flake8 = {git = "https://github.com/csachs/pyproject-flake8.git", rev = "patch-via-ast"}

[tool.poetry.scripts]
test = "threading_test.cli:cli"

[tool.poe.tasks.lint]
sequence = [
  { cmd = "flake8 src/" },
  { cmd = "mypy src/" }
]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
sequence = [ 
  { cmd = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports src/" },
  { cmd = "isort src/" },
  { cmd = "black src/" },
  "lint"
]


[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
